Fix emma's about page
Previously, the licence limits written into the `release.yml` were being
overwritten when the FTSW ran.  This resulted in emma's about page
producing a `500` error as the expected limits were `nil`.

Now we add the limits after the FTSW has ran, meeting emma's about
page's expectations.

--- a/ansible/configure-playbook.yml
+++ b/ansible/configure-playbook.yml
@@ -4,12 +4,13 @@
   become: true
   become_user: root
   become_method: sudo
-  gather_facts: False
   vars:
     start_monit: true
   roles:
     - role: configure-vanilla
       tags: configure-vanilla
+    - role: license-limits
+      tags: license-limits
     - role: demo-data
       tags: demo-data
     - role: finalization
