Update release info details on about pages

--- a/ansible/roles/release-info/files/version.yml
+++ b/ansible/roles/release-info/files/version.yml
@@ -1,8 +1,8 @@
-date: 2019-12-02 15:52:00
-version: 6.4.0
-revision: 44391
+date: 2022-10-25 14:42:00
+version: 8.0.0-rc1
+revision: 44392
 code_base: uranus-concertim
-copyright: 2020
-build_date: 2019-12-02 15:52:00
-build_version: 6.4.0
-build_revision: 44391
+copyright: 2022
+build_date: 2022-10-25 14:42:00
+build_version: 8.0.0-rc1
+build_revision: 44392
