--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -14,7 +14,7 @@
     - martha
     - meryl
     # - theresa
-    # - ct-capacity-daemon
+    - ct-capacity-daemon
     #
     # Other daemons 
     - delayed_job
