--- a/ansible/roles/package-daemons/defaults/main.yml
+++ b/ansible/roles/package-daemons/defaults/main.yml
@@ -52,14 +52,12 @@ packaged_daemons:
   # controls).
   # - controls
 
-
   # Some kind of appliance health check thing.  Has monit and beanstalk
   # checkers.  No idea if this is needed.
   # - florence
 
-  # Calculates rack (and PDU?) capacity.
-  # Needs a number cruncher.
-  #- ct-capacity-daemon
+  # Calculates rack and PDU capacity.
+  - ct-capacity-daemon
 
   # Another thing to do with metrics?  No idea if this is needed or not.  It
   # might be nothing more than a rebranded `demm`?  Or it might be a demm
@@ -71,5 +69,6 @@ init_only_daemons:
   - delayed_job
 
 number_crunchers:
-  - meryl
+  - ct-capacity-daemon
   - martha
+  - meryl
