Start martha (and meryl) as part of finalization

--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -3,14 +3,20 @@
     name: "{{ item }}"
     state: restarted
   loop:
+    # Rails apps
     - mongrel_cluster
     - emma
+    #
+    # Daemons
     - ailsa
-    # - maggie
-    # - martha
-    # - theresa
     - enid
+    # - maggie
+    - martha
+    - meryl
+    # - theresa
     # - ct-capacity-daemon
+    #
+    # Other daemons 
     - delayed_job
 
 - name: Restart delia service
