First pass at systemd configuration for emma
The systemd configuration consists of 3 parts:

1. A unit file `emma.service`.
2. A unit template file `emma@.service`.
3. A generator.

The `emma.service` unit allows for controlling all of the emma
instances.

The `emma@.service` unit template allows for defining instances of emma
by creating symlinks.   E.g., `ln -s emma@.service emma@9000.service`
will create a unit for an emma instance running on port `9000`.

The generator is ran by systemd as part of its start up routine.  It
creates a "wants" directory specifying that `emma.service` wants the
three `emma@900{0,1,2}.service`s.

The result is that on boot appropriate symlinks are created; the enabled
`emma.service` unit is started and the dynamically managed
`emma@.service` instances are started as a dependency.

This allows using systemd to manage both the entire emma cluster as well
as individual instances via (eventually) monit.

--- a/ansible/roles/emma/defaults/main.yml
+++ b/ansible/roles/emma/defaults/main.yml
@@ -1,1 +1,7 @@
 rails_env: development
+emma_ports:
+  - 9000
+  - 9001
+  - 9002
+emma_systemd_service: /lib/systemd/system/emma.service
+emma_systemd_service_template: /lib/systemd/system/emma@.service
