Add mia monit configuration

--- a/ansible/roles/monit/tasks/main.yml
+++ b/ansible/roles/monit/tasks/main.yml
@@ -44,6 +44,7 @@
         dest: /etc/monit/conf.d/
       loop:
         - phoenix-emma.monit
+        - phoenix-mia.monit
 
 - name: Install monit utility scripts
   ansible.builtin.copy:
