systemd configuration for phoenix-mongrel

--- a/ansible/roles/phoenix-mongrel/defaults/main.yml
+++ b/ansible/roles/phoenix-mongrel/defaults/main.yml
@@ -1,4 +1,16 @@
 gem_18_bin_dir: /opt/ruby-1.8/bin
 mongrel_conf_dir: /etc/mongrel_cluster
-mongrel_pid_dir: /var/run/mongrel_cluster
+mongrel_pid_dir: /run/mongrel_cluster
 mongrel_user: www-data
+mongrel_systemd_service: /lib/systemd/system/phoenix_mongrel.service
+mongrel_systemd_service_template: /lib/systemd/system/phoenix_mongrel@.service
+mongrel_servername_ports:
+  - uma.3001
+  - hacor.3002
+  - meca.3003
+  - scram.3004
+  - oobm.3005
+  - sas.3007
+  - mia.8000
+  - mia.8001
+  - mia.8002
