--- a/ansible/roles/phoenix-mongrel/tasks/main.yml
+++ b/ansible/roles/phoenix-mongrel/tasks/main.yml
@@ -9,13 +9,8 @@
     - mongrel-1.1.3   # Include version to increase specificity of the glob.
     - mongrel_cluster
 
-- name: Install init.d file
-  ansible.builtin.template:
-    src: "mongrel_cluster.init"
-    dest: "/etc/init.d/mongrel_cluster"
-    owner: root
-    group: root
-    mode: "744"
+- name: Install systemd files
+  include_tasks: install_systemd_files
 
 - name: Make config directory
   ansible.builtin.file:
