Fix issue with monit trying to restart emma too soon

--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -46,6 +46,6 @@
 - name: Start monit
   ansible.builtin.service:
     name: monit
-    state: started
+    state: restarted
     enabled: yes
   when: start_monit == True
