Fix issue with DateTime.now
Without this we cannot create or edit thresholds as the
created_at,updated_at time is set to nonsense time that postgresql
refuses to accept.

--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -96,6 +96,13 @@
         path: "{{ core_path }}/lib/tasks/database.rake"
         insertbefore: BOF
 
+    - name: Fix issue with DateTime.now
+      ansible.builtin.copy:
+        src: monkey_patch_date_time_now.rb
+        dest: "{{ core_path }}/config/initializers/"
+        owner: www-data
+        group: www-data
+
     - name: Patch config/boot.rb to deal with YAML/psych issue
       ansible.builtin.lineinfile:
         insertbefore: "require 'yaml'"
