--- a/ansible/roles/demo-data/tasks/main.yml
+++ b/ansible/roles/demo-data/tasks/main.yml
@@ -1,33 +1,13 @@
-- name: Run generatortron
-  block:
-    - name: Run generatortron script
-      vars:
-        rails_env: production
-        rails_runner: ./script/rails runner
-        generatortron: "{{ role_path }}/files/scripts/generatortron.rb"
-        generatortron_data: "{{ role_path }}/files/data.yaml"
-      ansible.builtin.shell:
-        cmd: |
-          PATH=/opt/ruby-1.9/bin:$PATH
-          sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} {{ rails_runner }} {{ generatortron }} {{ generatortron_data }}'
-        chdir: /data/private/share/rails/emma/core
-      register:
-        generatortron
-      # The failure will become fatal after the stderr and stdout have been printed.
-      ignore_errors: True
-
-    - name: Generatortron stderr
-      ansible.builtin.debug:
-        var: generatortron.stderr_lines
-      failed_when: generatortron.rc != 0
-      ignore_errors: True
-      when: generatortron.rc != 0
-
-    - name: Generatortron stdout
-      ansible.builtin.debug:
-        var: generatortron.stdout_lines
-      failed_when: generatortron.rc != 0
-      when: generatortron.rc != 0
+- name: Run main generatortron
+  import_tasks: generatortron.yml
+  vars:
+    description: main
+    rails_env: production
+    rails_runner: ./script/rails runner
+    script_path: "{{ role_path }}/files/scripts/generatortron.rb"
+    data_path: "{{ role_path }}/files/data.yaml"
+    ruby_bin: /opt/ruby-1.9/bin
+    chdir: /data/private/share/rails/emma/core
 
 - name: Restart meryl
   ansible.builtin.service:
