--- a/ansible/roles/demo-data/files/data.yaml
+++ b/ansible/roles/demo-data/files/data.yaml
@@ -647,10 +647,12 @@ groups:
     metrics:
       - {name: "ct.pdu.psu0.real_power", operator: "Exists"}
       - {name: "ct.pdu.psu1.real_power", operator: "Exists"}
+
   - name: "Devices with psu0 metric"
     metrics:
       - {name: "ct.pdu.psu0.real_power", operator: "Exists"}
       - {name: "ct.pdu.psu1.real_power", operator: "Doesn't exist"}
+
   - name: "Devices with user.calc.power.share metric"
     metrics:
       - {name: "user.calc.power.share", operator: "Exists"}
@@ -665,8 +667,8 @@ inferred_metrics:
       - type: Group
         name: "Devices with psu0 metric"
     dest:
-      - type: Group
-        name: "Devices with psu0 metric"
+      type: Group
+      name: "Devices with psu0 metric"
     keys:
       - key: "a"
         source: "a"
@@ -681,8 +683,8 @@ inferred_metrics:
       - type: Group
         name: "Devices with psu[0-1] metric"
     dest:
-      - type: Group
-        name: "Devices with psu[0-1] metric"
+      type: Group
+      name: "Devices with psu[0-1] metric"
     keys:
       - key: "a"
         source: "a"
@@ -700,84 +702,81 @@ inferred_metrics:
       - type: Group
         name: "Devices with user.calc.power.share metric"
     dest:
-      - type: Group
-        name: "Devices with user.calc.power.share metric"
+      type: Group
+      name: "Devices with user.calc.power.share metric"
     keys:
       - key: "a"
         source: "a"
         metric: "user.calc.power.share"
 
-  - name: user.calc.power.share
+  - name: power.share
     unit: "W"
     formula: "a / (b / c)"
     tag: "SYSTEM"
     metric_type: "inferred"
     sources:
+      - type: Group
+        name: "Devices in HP-Blade-01"
       - type: Device
-        name: HP-Blade-1
-      - type: Group
-        name: "Devices in HP-Blade-1"
+        name: HP-Blade-01
     dest:
-      - type: Group
-        name: "Devices in HP-Blade-1"
+      type: Group
+      name: "Devices in HP-Blade-01"
     keys:
       - key: "a"
-        source: "a"
+        source: "b"
         metric: "ct.calc.power.total"
       - key: "b"
-        source: "b"
-        metric: "ct.snmp.load.1"
-        aggregate: "total"
+        source: "a"
+        metric: "total(ct.snmp.load.1)"
       - key: "c"
-        source: "b"
+        source: "a"
         metric: "ct.snmp.load.1"
 
-  - name: user.calc.power.share
+  - name: power.share
     unit: "W"
     formula: "a / (b / c)"
     tag: "SYSTEM"
     metric_type: "inferred"
     sources:
+      - type: Group
+        name: "Devices in HP-Blade-02"
       - type: Device
-        name: HP-Blade-2
-      - type: Group
-        name: "Devices in HP-Blade-2"
+        name: HP-Blade-02
     dest:
-      - type: Group
-        name: "Devices in HP-Blade-2"
+      type: Group
+      name: "Devices in HP-Blade-02"
     keys:
       - key: "a"
-        source: "a"
+        source: "b"
         metric: "ct.calc.power.total"
       - key: "b"
-        source: "b"
-        metric: "ct.snmp.load.1"
-        aggregate: "total"
+        source: "a"
+        metric: "total(ct.snmp.load.1)"
       - key: "c"
-        source: "b"
+        source: "a"
         metric: "ct.snmp.load.1"
 
-  - name: user.calc.power.share
+  - name: power.share
     unit: "W"
     formula: "a / (b / c)"
     tag: "SYSTEM"
     metric_type: "inferred"
     sources:
+      - type: Group
+        name: "Devices in HP-Blade-03"
       - type: Device
-        name: HP-Blade-3
-      - type: Group
-        name: "Devices in HP-Blade-3"
+        name: HP-Blade-03
     dest:
-      - type: Group
-        name: "Devices in HP-Blade-3"
+      type: Group
+      name: "Devices in HP-Blade-03"
     keys:
       - key: "a"
-        source: "a"
+        source: "b"
         metric: "ct.calc.power.total"
       - key: "b"
-        source: "b"
-        metric: "ct.snmp.load.1"
-        aggregate: "total"
+        source: "a"
+        metric: "total(ct.snmp.load.1)"
       - key: "c"
-        source: "b"
+        source: "a"
         metric: "ct.snmp.load.1"
