--- a/ansible/roles/demo-data/tasks/generatortron.yml
+++ b/ansible/roles/demo-data/tasks/generatortron.yml
@@ -2,7 +2,7 @@
   ansible.builtin.shell:
     cmd: |
       PATH={{ruby_bin}}:$PATH
-      sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} {{ rails_runner }} {{ script_path }} {{ data_path }}'
+      sudo -u www-data --preserve-env=PATH /bin/bash -c '{{additional_env}} RAILS_ENV={{ rails_env }} {{ rails_runner }} {{ script_path }} {{ data_path }}'
     chdir: "{{ chdir }}"
   register: generatortron
   # The failure will become fatal after the stderr and stdout have been printed.
@@ -19,4 +19,4 @@
   ansible.builtin.debug:
     var: generatortron.stdout_lines
   failed_when: generatortron.rc != 0
-  when: generatortron.rc != 0
+  #when: generatortron.rc != 0
