Change apache load balancing method
Previously, bybusyness was used.  We now use it again.

--- a/ansible/roles/webserver/files/apache2/conf-available/mia.proxy_cluster.conf
+++ b/ansible/roles/webserver/files/apache2/conf-available/mia.proxy_cluster.conf
@@ -2,13 +2,11 @@
   BalancerMember http://127.0.0.1:8000
   BalancerMember http://127.0.0.1:8001
   BalancerMember http://127.0.0.1:8002
-  #ProxySet lbmethod=bybusyness maxattempts=3 timeout=5
-  ProxySet maxattempts=3 timeout=5
+  ProxySet lbmethod=bybusyness maxattempts=3 timeout=5
 </Proxy>
 <Proxy balancer://emma_cluster>
   BalancerMember http://127.0.0.1:9900
   BalancerMember http://127.0.0.1:9901
   BalancerMember http://127.0.0.1:9902
-  #ProxySet lbmethod=bybusyness maxattempts=1 timeout=30
-  ProxySet maxattempts=1 timeout=30
+  ProxySet lbmethod=bybusyness maxattempts=1 timeout=30
 </Proxy>
