--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -39,15 +39,13 @@
     enabled: yes
 
 - name: Configure database user
-  vars:
-    db_user: www-data
   block:
-    - name: Check if {{ db_user }} role exists
+    - name: Check if {{ app_user }} role exists
       ansible.builtin.command:
-        cmd: sudo -u postgres psql postgres -tAc "SELECT 1 FROM pg_roles WHERE rolname='{{ db_user }}'"
+        cmd: sudo -u postgres psql postgres -tAc "SELECT 1 FROM pg_roles WHERE rolname='{{ app_user }}'"
       register: db_user_exist
 
-    - name: Create {{ db_user }} role
+    - name: Create {{ app_user }} role
       when: db_user_exist.stdout == ""
       ansible.builtin.command:
-        cmd: sudo -u postgres createuser {{ db_user }} -A -R -d
+        cmd: sudo -u postgres createuser {{ app_user }} -A -R -d
