--- a/ansible/roles/data_dirs/tasks/main.yml
+++ b/ansible/roles/data_dirs/tasks/main.yml
@@ -27,13 +27,13 @@
       mode: "755"
 
     - path: /data/private/share/etc/concurrent-thinking
-      owner: www-data
-      group: www-data
+      owner: "{{app_user}}"
+      group: "{{app_user}}"
       mode: u=rwx,g=rx,o=rx
 
     - path: /data/private/share/etc/concurrent-thinking/ssl
-      owner: www-data
-      group: www-data
+      owner: "{{app_user}}"
+      group: "{{app_user}}"
       mode: "755"
 
     - path: /data/public
