--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -1,27 +1,23 @@
-- name: Download packages from S3
-  amazon.aws.aws_s3:
-    bucket: alces-flight
-    object: /concertim/packages/misc/{{ item }}.tgz
-    dest: "{{ role_path }}/files/tmp/{{ item }}.tgz"
-    mode: get
-    aws_access_key: "{{ aws_access_key_id }}"
-    aws_secret_key: "{{ aws_secret_access_key }}"
-  loop:
-    - openssl-1.0.2u
-    - openssl-1.0.2l
-    - ruby-1.8.7-p374
-    - ruby-1.9.2-p0
-
-- name: Extract tar file
-  ansible.builtin.unarchive:
-    src: "tmp/{{ item }}.tgz"
-    dest: /
-    creates: /opt/{{ item }}
-  loop:
-    - openssl-1.0.2u
-    - openssl-1.0.2l
-    - ruby-1.8.7-p374
-    - ruby-1.9.2-p0
+- name: Install Ruby and OpenSSL packages
+  vars:
+    download_dest: "{{ role_path }}/files/tmp/{{ item }}.tgz"
+  block:
+    - name: Download packages from S3
+      amazon.aws.aws_s3:
+        bucket: "{{ s3_bucket }}"
+        object: "{{ s3_misc_packages_prefix }}{{ item }}.tgz"
+        dest: "{{ download_dest }}"
+        mode: get
+        aws_access_key: "{{ aws_access_key_id }}"
+        aws_secret_key: "{{ aws_secret_access_key }}"
+      loop: "{{ ruby_build_assets }}"
+    
+    - name: Extract tar file
+      ansible.builtin.unarchive:
+        src: "{{ download_dest }}"
+        dest: /
+        creates: /opt/{{ item }}
+      loop: "{{ ruby_build_assets }}"
 
 - name: Link Rubies
   ansible.builtin.file:
@@ -70,4 +66,3 @@
 
     - src: /usr/bin/ruby1.9
       dest: /usr/bin/ruby1.9.1
-
