--- a/ansible/roles/demo-data/tasks/generatortron.yml
+++ b/ansible/roles/demo-data/tasks/generatortron.yml
@@ -1,7 +1,7 @@
 - name: Run {{description}} generatortron script
   ansible.builtin.shell:
     cmd: |
-      PATH={{ruby_bin}}:$PATH
+      PATH={{ruby_bin_dir}}:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c '{{additional_env}} RAILS_ENV={{ rails_env }} {{ rails_runner }} {{ script_path }} {{ data_path }}'
     chdir: "{{ chdir }}"
   register: generatortron
