--- a/ansible/roles/demo-data/tasks/main.yml
+++ b/ansible/roles/demo-data/tasks/main.yml
@@ -7,7 +7,7 @@
     rails_runner: ./script/rails runner
     script_path: "{{ role_path }}/files/scripts/generatortron.rb"
     data_path: "{{ role_path }}/files/data.yaml"
-    ruby_bin: /opt/ruby-1.9/bin
+    ruby_bin_dir: /opt/ruby-1.9/bin
     chdir: /data/private/share/rails/emma/core
 
 - name: Stop meca
@@ -25,7 +25,7 @@
     rails_runner: ./script/runner
     script_path: "{{ role_path }}/files/scripts/generatortron_meca.rb"
     data_path: "{{ role_path }}/files/data.yaml"
-    ruby_bin: /opt/ruby-1.8/bin
+    ruby_bin_dir: /opt/ruby-1.8/bin
     chdir: /data/private/share/rails/meca
 
 - name: Start meca
