--- a/ansible/roles/phoenix-modules/defaults/main.yml
+++ b/ansible/roles/phoenix-modules/defaults/main.yml
@@ -3,7 +3,6 @@ phoenix_modules_root_dir: "/data/private/share/rails"
 integrator_password: integrator
 modules:
   - hacor
-  # - nadia
   - meca
   - oobm
   - sas
@@ -11,3 +10,4 @@ modules:
   - uma
 bind_directory: /opt/concurrent-thinking
 dynamic_images: "/opt/concurrent-thinking/mia/public/images/dynamic/"
+phoenix_modules_ruby_bin_dir: /opt/ruby-1.8/bin
