--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -35,7 +35,7 @@
     - role: delia
       tags: delia
     - role: delia-plugins
-      tags: [delia, delia-plugins]
+      tags: delia-plugins
     - role: package-daemons
       tags: package-daemons
     - role: phoenix-modules
