--- a/ansible/roles/phoenix-mongrel/templates/phoenix-mongrel@.service
+++ b/ansible/roles/phoenix-mongrel/templates/phoenix-mongrel@.service
@@ -7,7 +7,7 @@ Before=phoenix-mongrel.service
 After=network.target
 
 [Service]
-Environment=PATH=/opt/ruby-1.8/bin:/sbin:/bin:/usr/sbin:/usr/bin
+Environment=PATH={{ ruby_18_bin_dir }}:/sbin:/bin:/usr/sbin:/usr/bin
 Type=forking
 PIDFile={{ mongrel_pid_dir }}/%i.pid
 
